# nix-config

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CURSOR_FIX_README.md  MIGRATION_COMPLETE.md  NEOVIM_TUTORIAL.md  README-WINDOW-MANAGERS.md  README.md  RESTRUCTURE_PLAN.md  RESTRUCTURE_PROGRESS.md  WINDOW-MANAGER-INTEGRATION.md  check-commands.sh  configuration.nix  fix-window-manager.sh  flake.nix  home.nix  macos-window-manager-setup.md  result  skhdrc  test-cursor-fix.sh  yabairc
applications/common/: cross-platform-aliases.nix  default.nix  theming-examples.nix
applications/darwin/: default.nix  homebrew.nix  macos-utilities.nix  mas-apps.nix  xcode-tools.nix
applications/linux/: appimage.nix  default.nix  flatpak.nix  gaming.nix  linux-utilities.nix
docs/: THEMING.md  keepassxc.md  media-suite.md
modules/: alacritty.nix  emacs.nix  i3.nix  neovim.md  neovim.nix  p10k.zsh  skhd.nix  yabai.nix  zsh.nix
modules/common/: alacritty.nix  cli.nix  default.nix  development.nix  emacs.nix  fonts.nix  keepassxc.nix  keybindings.nix  locale.nix  media-suite.nix  media-workflows.nix  nixvim.nix  theming.nix  xdg.nix  zen-browser.nix  zsh.nix
modules/darwin/: apps.nix  (+6 more)
old-modules/: quick_terminal.nix  zsh.nix
profiles/: media-production.nix  minimal.nix  test-minimal.nix  workstation.nix
scripts/: README.md  check-configs.sh  check-shell.sh  com.koekeishiya.skhd.plist  com.koekeishiya.yabai.plist  disable-system-shortcuts.md  fix-skhd.sh  install-window-managers.sh  key-binding-troubleshooting.md  migrate-to-aerospace.sh  post-rebuild-hooks.sh  rebuild.sh  set-nix-shell.sh  setup-quick.sh  setup-shell.sh  setup-skhd.sh  setup-symlinks.sh  setup-yabai.sh  skhd-cheatsheet.md  skhdrc  switch-colorscheme.sh  use-nix-zsh.sh  yabairc
scripts/media/rust-tools/: Cargo.toml
scripts/media/rust-tools/transcribe_turbo/: Cargo.toml
scripts/media/rust-tools/transcribe_turbo/src/: main.rs
temp-files/: copy-config.sh  zsh_aliases  zshenv  zshrc
(+82 files in other folders)
